[package]
name = "tla-registry"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/neo-sky/hos-tla"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }

[dev-dependencies]
near-sdk = { version = "=5.24.1", features = ["unit-testing"] }
near-workspaces = "0.14.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
anyhow = "1"

[[test]]
name = "integration"
path = "tests/integration.rs"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.18.0-rust-1.86.0"
image_digest = "sha256:2d0d458d2357277df669eac6fa23a1ac922e5ed16646e1d3315336e4dff18043"
container_build_command = ["cargo", "near", "build", "reproducible-wasm"]
